--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   db:
-    image: "keinos/sqlite3:latest"
+    image: "sqlitebrowserred/sqlitebrowser"
     
   web:
     build: .
